--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         app.kubernetes.io/version: v1.8.0
     spec:
       containers:
-      - image: quay.io/coreos/kube-state-metrics:v1.8.0
+      - image: k8s.gcr.io/kube-state-metrics:v1.8.0
         livenessProbe:
           httpGet:
             path: /healthz
